fix: donation__text align left

--- a/shelter/style.scss
+++ b/shelter/style.scss
@@ -797,7 +797,7 @@ main {
 
   .donation__text {
     letter-spacing: 0.06em;
-    text-align: center;
+    text-align: left;
   }
 
   .donation__pic {
